--- a/weblucila.css
+++ b/weblucila.css
@@ -1,3 +1,8 @@
+*{
+  margin:0%;
+  padding:0%
+}
+
 .container {  display: grid;
     grid-template-columns: 1fr 0.5fr 0.5fr;
     grid-template-rows: auto;
