--- a/style.css
+++ b/style.css
@@ -20,43 +20,54 @@
     background-color:rgb(140, 171, 140);
     position: fixed;
     width: 100%;
-    z-index: 1000; /* Asegura que esté en la parte superior */
-    text-align: center; /* Centra el texto */
+    z-index: 1000; 
+    text-align: center; 
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 12px;
   }
 
   .main-1 {
     grid-area: main-1;
     background-color: rgb(166, 187, 166); 
     display: flex;
-    padding: 5;
+    padding-top: 33px;
 
 }
 
+.recomen{
+  padding-top: 60px;
+  background-color: rgb(187, 212, 187);
+  grid-area: main-1;
+  width: 100;
+  margin: 0;
+}
 .text {
     flex: 1;
-    font-size: 25px; /* Ajusta el tamaño de la fuente según tus preferencias */
+    font-size: 25px; 
     padding: 1cm;
     text-align: justify;
 }
 
 p {
-  margin-bottom: 20px; /* Puedes ajustar el valor según lo necesites */
+  margin-bottom: 20px; 
 }
 
 h3 {
-  margin-bottom: 20px; /* Puedes ajustar el valor según lo necesites */
+  margin-bottom: 20px; 
 }
 
 .text-center {
   flex: 1;
-  font-size: 25px; /* Ajusta el tamaño de la fuente según tus preferencias */
+  font-size: 25px; 
   padding: 1cm;
   text-align: center;
 }
 
 .text-m4 {
   flex: 1;
-  font-size: 20px; /* Ajusta el tamaño de la fuente según tus preferencias */
+  font-size: 20px; 
   padding: 1cm;
   text-align: justify;
 }
@@ -69,9 +80,9 @@ h3 {
 }
 
 .images img {
-    max-width: 200px; /* Ajusta el tamaño máximo según tus preferencias */
-    height: auto; /* Permite que la imagen conserve su relación de aspecto */
-    margin-bottom: 10px; /* Ajusta el margen entre las imágenes */
+    max-width: 200px; 
+    height: auto; 
+    margin-bottom: 10px; 
 }
 
 .images2 {
@@ -81,57 +92,87 @@ h3 {
 }
 
 .images2 img {
-  max-width: 200px; /* Ajusta el tamaño máximo según tus preferencias */
-  height: auto; /* Permite que la imagen conserve su relación de aspecto */
-  margin-bottom: 10px; /* Ajusta el margen entre las imágenes */
+  max-width: 200px; 
+  height: auto; 
+  margin-bottom: 10px; 
 }
   
-  .main-2 { 
-    grid-area: main-2; 
-    background-color: rgb(187, 212, 187);
-    }
+.main-2 { 
+  grid-area: main-2; 
+  background-color: rgb(187, 212, 187);
+  padding-top: 30px
+  }
 
 
-  .main-3 { 
-    grid-area: main-3; 
-    background-color:rgb(206, 231, 206); 
-    text-align: center; /* Centra el texto */ }
+.main-3 { 
+  grid-area: main-3; 
+  background-color:rgb(206, 231, 206); 
+  text-align: center; 
+  padding-top: 30px
+}
 
-  .main-4 { 
-    grid-area: main-4; 
-    background-color:rgb(206, 231, 206); 
-    text-align: center; /* Centra el texto */ }
+.main-4 { 
+  grid-area: main-4; 
+  background-color:rgb(206, 231, 206); 
+  text-align: center;  
+  padding-top: 30px
+}
   
-  .footer { 
-    grid-area: footer; 
-    background-color:rgb(140, 171, 140); 
-    text-align: center;
-    padding:0%
-    }
+.footer { 
+  grid-area: footer; 
+  background-color:rgb(140, 171, 140); 
+  text-align: center;
+  padding:10px
+  }
 
-  .dropdown {
-    position: relative;
-    display: inline-block;
-    color: blue;
-    font-size:large;
+.dropdown {
+  position: relative;
+  display: inline-block;
+  color: blue;
+  font-size:large;
   }
   
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    padding: 12px 16px;
-    z-index: 1;
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+  z-index: 1;
+  color: black;
+  }
+  
+.dropdown:hover .dropdown-content {
+  display: block;
+  }
+
+  .menu {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: flex; 
+    padding:15px
+}
+
+.menu li {
+    margin-left: 20px; 
+}
+
+.menu li:first-child {
+    margin-left: 0; 
+}
+
+.menu li a {
+    text-decoration: none;
     color: black;
-  }
-  
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
+}
 
-  
+.menu li a:hover {
+    background-color: #f0f0f0;
+}
+
+
   @media screen and (max-width: 992px) {
     .container {  display: grid;
         grid-template-columns: 1fr 1fr;
